# tiny_web_server

./: .clang-format  .gitignore  CMakeLists.txt  buildAll.sh  buildall.sh  cleanall
base/: CMakeLists.txt  CMakeVar.txt  rebuild.sh
base/base/: CMakeLists.txt  base_predefine.h  file.cpp  file.h  logger.cpp  logger.h
base/doc/: gtest.md
base/learn_demo/cmakeCook/check_cpu_architecture_info/: CMakeLists.txt  build.sh
base/learn_demo/cmake_cook/check_cpu_architecture_info/: CMakeLists.txt  build.sh
base/test/: CMakeLists.txt
demo/: CMakeLists.txt
doc/: design.md  design_time.md
misc/: CMakeVar.txt
misc/base/base/: CMakeLists.txt  any.hpp  thread.hpp
misc/base/learn_demo/cmake_cook/check_cpu_architecture_info/: cpu_architecture.cpp
misc/base/learn_demo/cmake_cook/use_google_test/: CMakeLists.txt  main.cpp
misc/demo/: CMakeLists.txt
misc/demo/src/: hello.cpp
src/: CMakeLists.txt  any.hpp  global.h  logger.cpp  logger.h  main.cpp
test/: CMakeLists.txt
test/src/: CMakeLists.txt  main.cpp
